--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,24 @@
 language: c
+
 branches:
   only:
-  - draft
+    - draft
+
 env:
   global:
   - default_branch_scenario="published/subcountry2014"
   - study_area="Poland"
-  - secure: F+/3VyieFyXmdoWvY2GzDZjPGdLB3B8Mht9uigfZnA5C2j+iMaRnRDwk6ulAmNZHgsOg3gmIgmPXK8TjOSs8p3/bmBhKC+yj1b/OD2A53lmN7wGl7Hp60zWlX9izOItinSo3aBG9LYfs8LP5Qpcordpz8zy46Fmn6HHcjnz+Nqw=
+
 matrix:
-  fast_finish: true
+  fast_finish: true # finish at first failure
+
 before_install:
 - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
 - curl -OL http://raw.github.com/OHI-Science/ohi-webapps/master/ohi-travis-functions.R
 - chmod 755 ./travis-tool.sh
 - ./travis-tool.sh bootstrap
 - sudo apt-get install pandoc
+
 install:
 - ./travis-tool.sh install_r zoo
 - ./travis-tool.sh install_r psych
@@ -24,15 +28,21 @@ install:
 - ./travis-tool.sh install_r httr
 - ./travis-tool.sh install_github ropensci/git2r
 - ./travis-tool.sh install_github ohi-science/rCharts
-- ./travis-tool.sh install_github ohi-science/ohicore@dev
+- ./travis-tool.sh install_github ohi-science/ohicore@dev # @master or @2f7a3d7 to specify by commit (https://github.com/OHI-Science/ohicore/commits/master)
 - git config --global user.email "bbest@nceas.ucsb.edu"
 - git config --global user.name "Ben Best"
+
 script:
-- Rscript ohi-travis-functions.R calculate_scores && Rscript ohi-travis-functions.R
-  create_results && Rscript ohi-travis-functions.R push_branch draft && Rscript ohi-travis-functions.R
-  push_branch published && Rscript ohi-travis-functions.R create_pages
+# execute as a sequence, so if any fail, none of the subsequent commands are executed
+- Rscript ohi-travis-functions.R calculate_scores &&
+  Rscript ohi-travis-functions.R create_results &&
+  Rscript ohi-travis-functions.R push_branch draft &&
+  Rscript ohi-travis-functions.R push_branch published &&
+  Rscript ohi-travis-functions.R create_pages
+
 after_failure:
 - ./travis-tool.sh dump_logs
+
 notifications:
   email:
     recipients:
