--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ study_area:  Poland
 git_owner:   OHI-Science
 git_repo:    pol
 git_slug:    OHI-Science/pol
-app_url:     http://ohi-science.nceas.ucsb.edu/pol
+app_url:     https://ohi-science.shinyapps.io/pol_app
 
-default_branch_scenario: subcountry2014/published
+default_branch_scenario: published/subcountry2014
 
 # Jekyll configuration
 
